[gd_scene load_steps=6 format=2]

[ext_resource path="res://lobby/lobby.gd" type="Script" id=1]
[ext_resource path="res://fonts/JetBrainsMono-ExtraBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://lobby/matchmakingpanel.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=2]
size = 80
outline_size = 2
outline_color = Color( 0.905882, 0.356863, 0.356863, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Lobby" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="."]
margin_left = 64.0
margin_top = 88.0
margin_right = 960.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 2 )
text = "MULTIPLAYER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MatchMakingPanel" type="Panel" parent="."]
margin_left = 256.0
margin_top = 192.0
margin_right = 768.0
margin_bottom = 512.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FindButton" type="Button" parent="MatchMakingPanel"]
margin_left = 160.0
margin_top = 120.0
margin_right = 352.0
margin_bottom = 140.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Find Match"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="MatchMakingPanel"]
margin_left = 160.0
margin_top = 152.0
margin_right = 352.0
margin_bottom = 172.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleConnectionButton" type="Button" parent="MatchMakingPanel"]
margin_left = -240.0
margin_top = 368.0
margin_right = -104.0
margin_bottom = 388.0
text = "Connection On/Off"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="MatchMakingPanel"]
margin_left = 160.0
margin_top = 352.0
margin_right = 352.0
margin_bottom = 372.0
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusOk" type="Label" parent="MatchMakingPanel"]
margin_top = 88.0
margin_right = 512.0
margin_bottom = 102.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0, 1, 0.015625, 1 )
align = 1

[node name="StatusFail" type="Label" parent="MatchMakingPanel"]
margin_left = 152.0
margin_top = 48.0
margin_right = 360.0
margin_bottom = 62.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1

[node name="HTTPRequest" type="HTTPRequest" parent="MatchMakingPanel"]
[connection signal="pressed" from="MatchMakingPanel/FindButton" to="MatchMakingPanel" method="_on_FindButton_pressed"]
[connection signal="pressed" from="MatchMakingPanel/CancelButton" to="MatchMakingPanel" method="_on_CancelButton_pressed"]
[connection signal="pressed" from="MatchMakingPanel/ToggleConnectionButton" to="MatchMakingPanel" method="_on_ToggleConnectionButton_pressed"]
[connection signal="button_up" from="MatchMakingPanel/MenuButton" to="MatchMakingPanel" method="_on_MenuButton_button_up"]
[connection signal="request_completed" from="MatchMakingPanel/HTTPRequest" to="MatchMakingPanel" method="_on_request_completed"]
